# realtor

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/realtor/: __init__.py  app.py  config.py  db.py  models.py  parser.py
tests/: test_parser.py
